[package]
name = "mcs"
version = "0.1.1"
authors = ["Jonathan S <gereeter+code@gmail.com>"]
license = "MIT"
repository = "https://github.com/gereeter/mcs-rs"
documentation = "https://docs.rs/mcs"
keywords = ["spinlock", "mutex"]
description = """
Synchronization primitives based on Mellor-Crummey and Scott's (MCS)
queueing spinlock. This library is usable without `std`.
"""

[features]
unstable = []
default = ["unstable"]

[dev-dependencies]
lazy_static = "0.2"
